fix: TLMN and TLMB