@@ -2,6 +2,7 @@ package game;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Objects;
 import java.util.Random;
 import java.util.Vector;
 import java.util.logging.Level;
@@ -11,7 +12,6 @@ public class TLMB {
     int countcard;
     int[] card=new int[14];
     boolean co2Co;
-    String[] elethey=new String[100];
     int countdapanlienquan;
     int countdapanlienquansum;
     int[] dapanlienquansum=new int[100];
@@ -28,15 +28,12 @@ public class TLMB {
     int soLuongActor;
     int[] SoLaConLaiCuaActor=new int[30];
     int index_actor_truoc,index_actor_sau,minactor,maxactor,tongSoLaDoiThu;
-    PhanNhomBai gttlmnpnb;
     NaiveBayes_Bot_LearnData ml_naivebays_bot;
-    ArrayList<CardBot> cardbot =new ArrayList<CardBot>();
+    ArrayList<CardBot> cardbot =new ArrayList<>();
     public TLMB() {
 
     }
-//    private boolean cungMau(int card1, int card2) {
-//        return (card1 - 1) % 4 / 2 == (card2 - 1)% 4 / 2; // cung mau
-//    }
+
     public boolean LaCoc()
     {
         return countcard == 1;
@@ -59,46 +56,27 @@ public class TLMB {
                 && countcard == 3;
     }
     public boolean LaDoi() {
-//        System.out.println("Card[1]: " + card[1] + ", Card[2]: " + card[2]);
-//        System.out.println("Cùng số: " + (lamTronLen((float) card[2] / 4) == lamTronLen((float) card[1] / 4)));
-//        System.out.println("Cùng màu: " + ((card[1] % 4) / 2) + "=" + ((card[2] % 4) / 2));
-//        System.out.println("Countcard: " + countcard);
-
         return lamTronLen((float) card[2] / 4) == lamTronLen((float) card[1] / 4) // Cùng số
                 && ((card[1] - 1) % 4 / 2 == (card[2] - 1)% 4 / 2)
                 && countcard == 2;
     }
-    public boolean LaTuQuy()
-    {
+    public boolean LaTuQuy() {
         return (lamTronLen((float) card[4] / 4) ==
                 lamTronLen((float) card[1] / 4))
                 && countcard == 4;
     }
-    public String timKieuBai(int countcard,int[] card)
-    {
+    public String timKieuBai(int countcard,int[] card) {
         this.card=card;
         this.countcard=countcard;
-        if(LaCoc())
-        {
+        if(LaCoc()) {
             return "coc";
-        }
-
-        else if(LaDoi())
-        {
+        } else if(LaDoi()) {
             return "doi";
-        }
-
-        else if(LaBaCon())
-        {
+        } else if(LaBaCon()) {
             return "bacon";
-        }
-        else if(LaTuQuy())
-        {
-
+        } else if(LaTuQuy()) {
             return "tuquy";
-        }
-        else if(LaSanh())
-        {
+        } else if(LaSanh()) {
             return "sanh";
         }
         return "khonghople";
@@ -109,109 +87,57 @@ public class TLMB {
 
         return (int)kqchia+1;
     }
-    public void luuDuLieuCacBoThoaManCoTinhHonSoVoi(int[] carddp, int countdp)
-    {
+    public void luuDuLieuCacBoThoaManCoTinhHonSoVoi(int[] carddp, int countdp) {
         String kieubai=timKieuBai(countdp, carddp);
-        for(int i=0;i<cardbot.size();i++)
-        {
+        for(int i=0;i<cardbot.size();i++) {
             String[] elebot=cardbot.get(i).daycard.split("\\$");
             if(cardbot.get(i).loaibai.equals(kieubai)
                     &&cardbot.get(i).sola==countdp&&
-                    carddp[countdp]<Integer.parseInt(elebot[countdp-1]))
-
-            {
+                    carddp[countdp]<Integer.parseInt(elebot[countdp-1])) {
                 luuDuLieuCacDapAnLienQuan(i);
             }
         }
-
-        if(kieubai.equals("coc")&&carddp[countdp]>=49)
-        {
-            for(int i=0;i<cardbot.size();i++)
-            {
-                if(cardbot.get(i).loaibai.equals("tuquy"))
-                {
+        if(kieubai.equals("coc")&&carddp[countdp]>=49) {
+            for(int i=0;i<cardbot.size();i++) {
+                if(cardbot.get(i).loaibai.equals("tuquy")) {
                     baitopdoduoc=true;
                     luuDuLieuCacDapAnLienQuan(i);
                 }
             }
         }
-//        if(kieubai.equals("doi")&&(carddp[countdp]<=50&&carddp[countdp]>=49))
-//        {
-//            for(int i=0;i<cardbot.size();i++)
-//            {
-//                if(cardbot.get(i).loaibai.equals("doi")
-//                        &&(cardbot.get(i)>=51))
-//                {
-//                    baitopdoduoc=true;
-//                    luuDuLieuCacDapAnLienQuan(i);
-//                }
-//
-//            }
-//        }
     }
-    public boolean BiVaCham2(Vector<String> local, String B) throws IOException
-    {
-       /* System.out.print("Enter a character: ");
-        // Read the char
-        char ch = (char) System.in.read();*/
-        String bien1="",bien2=B;int count1=0,count2=0;
-        for(int i=0;i<local.size();i++)
-        {
-            bien1+= local.get(i);
+    public boolean BiVaCham2(Vector<String> local, String B) {
+        StringBuilder bien1= new StringBuilder();
+        int count1=0,count2=0;
+        for (String s : local) {
+            bien1.append(s);
         }
-
-        int count=0;
-        for(int i=0;i<bien1.length();i++)
-        {
+        for(int i=0;i<bien1.length();i++) {
             if(bien1.charAt(i)=='$') count1++;
         }
-        for(int i=0;i<bien2.length();i++)
-        {
-            if(bien2.charAt(i)=='$') count2++;
+        for(int i = 0; i< B.length(); i++) {
+            if(B.charAt(i)=='$') count2++;
         }
-        //   System.out.println("count1: "+count1); System.out.println("count2: "+count2);
-        //   System.out.println("--"+bien1);
-        // System.out.println("--"+bien2);
-        String[] temp1 =bien1.split("\\$");
-        String[] temp2 =bien2.split("\\$");
 
-        for(int i=0;i<count1;i++)
-        {
-            int count3=0;
-            for(int j=0;j<count2;j++)
-            {
-                if(temp2[j].equals(temp1[i]))
-                {
-                    //System.out.println("va cham ne");
+        String[] temp1 = bien1.toString().split("\\$");
+        String[] temp2 = B.split("\\$");
+
+        for(int i=0;i<count1;i++) {
+            for(int j=0;j<count2;j++) {
+                if(temp2[j].equals(temp1[i])) {
                     return true;}
             }
-
         }
         return false;
-
     }
-
-
     boolean cochutrinhketthuc;
     int chutrinhketthuc;
     void unique_combination(int l, String sumString, String K,
                             Vector<String> local,Vector<String> local2,
-                            Vector<String> A, Vector<String> B) throws IOException
-    {
-        //
+                            Vector<String> A, Vector<String> B) {
         if(cochutrinhketthuc) return;
-        if (sapXepGiaTriTheoThuTuTangDanString(sumString).equals(K))
-        {
+        if (sapXepGiaTriTheoThuTuTangDanString(sumString).equals(K)) {
             cochutrinhketthuc=true;
-           /* System.out.print("{");
-            for (int i = 0; i < local.size(); i++) {
-                if (i != 0)
-                    System.out.print(" ");
-                System.out.print("Đánh: "); System.out.print(local2.get(i));
-                if (i != local.size() - 1)
-                    System.out.print(", ");
-            }
-            System.out.println("}");*/
             return;
         }
 
@@ -222,13 +148,10 @@ public class TLMB {
                 continue;
 
             // Check if it is repeated or not
-            if (i > l && A.get(i) == A.get(i - 1) )
-                continue;
+            if (i > l && Objects.equals(A.get(i), A.get(i - 1))) continue;
             if(local.contains(A.get(i))) continue;
             if(BiVaCham2(local2,B.get(i))) continue;
             if(local.size()>(chutrinhketthuc-1)) continue;
-            // Take the element into the combination
-            //if(BiVaCham(tempvacham+=B.get(i))==true){tempvacham=""; continue;}
 
             local.add(A.get(i));
             local2.add(B.get(i));
@@ -238,76 +161,57 @@ public class TLMB {
                     local,local2, A,B);
 
             // Remove element from the combination
-            local.remove(local.size() - 1);
-            local2.remove(local2.size() - 1);
+            local.removeLast();
+            local2.removeLast();
         }
     }
 
     // Function to find all combination
     // of the given elements
-    void Combination(Vector<String> A,Vector<String> B, String K) throws IOException
-    {
-        // Sort the given elements
-
+    void Combination(Vector<String> A,Vector<String> B, String K) throws IOException {
         // To store combination
-        Vector<String> local = new Vector<String>();
-        Vector<String> local2 = new Vector<String>();
+        Vector<String> local = new Vector<>();
+        Vector<String> local2 = new Vector<>();
 
         unique_combination(0, "", K, local,local2, A,B);
     }
-    public String sapXepGiaTriTheoThuTuTangDanString (String str)
-    {
-
-        if(str.equals("")) return "";
+    public String sapXepGiaTriTheoThuTuTangDanString (String str) {
+        if(str.isEmpty()) return "";
         int count=0;
-        ////////System.out.println(""+chuoicontohopdacbietsanhdoi[i]);
-        for(int t=0;t<str.length();t++)
-        {
-            if(str.charAt(t)=='$')
-            {
+
+        for(int t=0;t<str.length();t++) {
+            if(str.charAt(t)=='$') {
                 count++;
             }
         }
-        ////////System.out.println("Count "+count);
         String[] s=str.split("\\$");
         int[] temgiatricuachuoi=new int[30];
-        for(int j=1;j<=count;j++)
-        {
-            temgiatricuachuoi[j]=Integer.valueOf(s[j-1]);
-            //   //////System.out.print("-"+temgiatricuachuoi[j]);
+        for(int j=1;j<=count;j++) {
+            temgiatricuachuoi[j]=Integer.parseInt(s[j-1]);
         }
-        int tg=0;
+        int tg;
         for(int u = 1; u < count ; u++){
             for(int v = u + 1; v < count+1; v++){
                 if(temgiatricuachuoi[u] > temgiatricuachuoi[v]){
                     tg = temgiatricuachuoi[u];
                     temgiatricuachuoi[u] = temgiatricuachuoi[v];
                     temgiatricuachuoi[v] = tg;
-
                 }
             }
-
         }
-
-        str="";
-        for(int j=1;j<=count;j++)
-        {
-            str+= temgiatricuachuoi[j] +"$";
+        StringBuilder strBuilder = new StringBuilder();
+        for(int j = 1; j<=count; j++) {
+            strBuilder.append(temgiatricuachuoi[j]).append("$");
         }
-        //   //////System.out.println(chuoitohopdacbietsanhdoi[i]);
-
+        str = strBuilder.toString();
         return str;
     }
     String[] tempfullnameString =new String[5000];
     String[] tempdaycard =new String[5000];
     int[] tempsola =new int[5000];
-    int count_tohopchutrinh;
     int maxla=0;
-    public void sort()
-    {
-
-        for(int i=0;i<cardbot.size();i++)
-        {
+    public void sort() {
+        for(int i=0;i<cardbot.size();i++) {
             tempfullnameString[i]=cardbot.get(i).fullnamecard;
             tempdaycard[i]=cardbot.get(i).daycard;
             tempsola[i]=cardbot.get(i).sola;
@@ -328,239 +232,177 @@ public class TLMB {
                     tg3 = tempsola[u];
                     tempsola[u] = tempsola[v];
                     tempsola[v] = tg3;
-
                 }
             }
         }
-             /* for(int i=0;i<cardbot.size();i++)
-              {
-                  System.out.println(""+tempfullnameString[i]);
-              }*/
     }
-    public void duyetmoitohop()
-    {
+    public void duyetmoitohop() {
         try {
-
             String K = baiconlai();
 
             sort();
 
-            Integer[] arr = new Integer[900000];
-            java.util.List<String> list = new ArrayList<String>();
-            java.util.List<String> list2 = new ArrayList<String>();
-            int count=0;
-            for(int i=0;i<cardbot.size();i++)
-            {
-           /* System.out.println(""+i+"\t"+tempdaycard[i]
-                    +"\t"+cardbot.get(i).loaibai+"\t"+cardbot.get(i).sola+
-                    "\t"+cardbot.get(i).fullnamecard
-+"\t"+cardbot.get(i).sumsohieu);*/
-
+            java.util.List<String> list = new ArrayList<>();
+            java.util.List<String> list2 = new ArrayList<>();
+            for(int i=0;i<cardbot.size();i++) {
                 list.add(tempdaycard[i]);
                 list2.add(tempfullnameString[i]);
-
             }
-            Vector<String> A = new Vector<String>(list);
-            Vector<String> B = new Vector<String>(list2);
+            Vector<String> A = new Vector<>(list);
+            Vector<String> B = new Vector<>(list2);
 
             Combination(A,B, K);
         } catch (IOException ex) {
             Logger.getLogger(BOT_TinhToan_va_RaQuyetDinh.class.getName()).log(Level.SEVERE, null, ex);
         }
-
     }
+    public int chuTrinhKetThucNganNhat() {
+        int i;
+        int start;int end;
 
-    public int chuTrinhKetThucNganNhat()
-    {
-        int i=0;
-     /* for(;i<cardbot.size();i++)
-            {
-                if(cardbot.get(i).loaibai.equals("coc"))
-                {
-                    System.out.print(cardbot.get(i).daycard);
-                }
-            }*/
-        int start=0;int end=0;
-      /*if(tongSoLaConLai()>=13)
-      {
-          System.out.println("Thỏa mãn");
-
-      }*/
         end=3;
         start=1;
-        for(i=start;i<=end;i++)
-        {
+        for(i=start;i<=end;i++) {
             this.chutrinhketthuc=i;
             duyetmoitohop();
-            if(cochutrinhketthuc)
-            {
+            if(cochutrinhketthuc) {
                 return i;
             }
-
         }
         return 13;
-
     }
-    public int tongsohieubaiconlai()
-    {
+    public int tongsohieubaiconlai() {
         int sum=0;
-        for(int i=0;i<cardbot.size();i++)
-        {
-            if(cardbot.get(i).loaibai.equals("coc"))
-            {
-                sum+=cardbot.get(i).sumsohieu;
+        for (CardBot cardBot : cardbot) {
+            if (cardBot.loaibai.equals("coc")) {
+                sum += cardBot.sumsohieu;
             }
         }
         return sum;
     }
-    public String baiconlai()
-    {
-        String sum="";
-        for(int i=0;i<cardbot.size();i++)
-        {
-            if(cardbot.get(i).loaibai.equals("coc"))
-            {
+    public String baiconlai() {
+        StringBuilder sum= new StringBuilder();
+        for (CardBot cardBot : cardbot) {
+            if (cardBot.loaibai.equals("coc")) {
                 //   System.out.print(cardbot.get(i).daycard);
-                sum+=cardbot.get(i).daycard;
+                sum.append(cardBot.daycard);
             }
         }
-        return sum;
+        return sum.toString();
     }
-    public int tongSoLaConLai()
-    {
+    public int tongSoLaConLai() {
         int sum=0;
-        for(int i=0;i<cardbot.size();i++)
-        {
-            if(cardbot.get(i).loaibai.equals("coc"))
-            {
+        for (CardBot cardBot : cardbot) {
+            if (cardBot.loaibai.equals("coc")) {
                 sum++;
             }
         }
         return sum;
     }
-    public void luuDuLieuCacDapAnLienQuan(int i)
-    {
+    public void luuDuLieuCacDapAnLienQuan(int i) {
         countdapanlienquan++;
         dapanlienquan[countdapanlienquan]=cardbot.get(i).daycard;
         dapanlienquansum[countdapanlienquansum]=cardbot.get(i).sumsohieu;
-
     }
-    public void xacDinhCacThongSoLienQuan()
-    {
+    public void xacDinhCacThongSoLienQuan() {
         minactor=10000;
         maxactor=0;
-        for(int i=1;i<=soLuongActor;i++)
-        {
-            if(i!=index_actor)
-            {
+        for(int i=1;i<=soLuongActor;i++) {
+            if(i!=index_actor) {
                 tongSoLaDoiThu+=SoLaConLaiCuaActor[i];
-                if(SoLaConLaiCuaActor[i]<minactor)
-                {
+                if(SoLaConLaiCuaActor[i]<minactor) {
                     minactor=SoLaConLaiCuaActor[i];
-                }
-                else if(SoLaConLaiCuaActor[i]>maxactor)
-                {
+                } else if(SoLaConLaiCuaActor[i]>maxactor) {
                     maxactor=SoLaConLaiCuaActor[i];
                 }
             }
         }
-        for(int i=0;i<cardbot.size();i++)
-        {
-            if(cardbot.get(i).loaibai.equals("coc")&&cardbot.get(i).sumsohieu>=45)
-            {
+        for (CardBot cardBot : cardbot) {
+            if (cardBot.loaibai.equals("coc") && cardBot.sumsohieu >= 45) {
                 countbaimanh++;
-                tongsohieubaimanh+=cardbot.get(i).sumsohieu;
+                tongsohieubaimanh += cardBot.sumsohieu;
             }
-            if(cardbot.get(i).loaibai.equals("tuquy"))
-            {
+            if (cardBot.loaibai.equals("tuquy")) {
                 countbaimanh++;
-                tongsohieubaimanh+=cardbot.get(i).sumsohieu;
+                tongsohieubaimanh += cardBot.sumsohieu;
             }
-            if(cardbot.get(i).loaibai.equals("coc")&&cardbot.get(i).sumsohieu==52)
-            {
-                co2Co=true;
+            if (cardBot.loaibai.equals("coc") && cardBot.sumsohieu == 52) {
+                co2Co = true;
             }
         }
     }
     int ctkt;
-    public int mucDoUuTienRaBaiChung()
-    {
+    public int mucDoUuTienRaBaiChung() {
         xacDinhCacThongSoLienQuan();
-        for(int i=0;i<cardbot.size();i++)
-        {
-            if(cardbot.get(i).loaibai.equals("coc")&&cardbot.get(i).sumsohieu==bainhonhat)
-            {indexuutien=1;     return 999;}
+        for (CardBot cardBot : cardbot) {
+            if (cardBot.loaibai.equals("coc") && cardBot.sumsohieu == bainhonhat) {
+                indexuutien = 1;
+                return 999;
+            }
         }
-
         if(ctkt>4) System.out.println("Bot "+index_actor+" co chu trinh > 3");
         else System.out.println("Chu trinh ket thuc ngan nhat cua bot "+index_actor+" la: "+ctkt);
         if((ctkt==1)||(tongSoLaConLai()>=10&&ctkt<=3&&countbaimanh>=3)
                 ||(SoLaConLaiCuaActor[index_actor_sau]==1)
-                ||(minactor==1&&(ctkt<=3))||((minactor==1)&&countbaimanh>=2))
-        {System.out.print("uu tien chu trinh toc chien max lenght");
-            System.out.println(" tại 4");return 99;}
+                ||(minactor==1&&(ctkt<=3))||((minactor==1)&&countbaimanh>=2)) {
+            System.out.print("uu tien chu trinh toc chien max lenght");
+            System.out.println(" tại 4");return 99;
+        }
         return 0;
     }
-    public int mucDoUuTienRaBai4Actor()
-    {
+    public int mucDoUuTienRaBai4Actor() {
         int mdutrbc=mucDoUuTienRaBaiChung();
         if(mdutrbc!=0) return mdutrbc;
-        if(ctkt<=2)
-        {
-            if(tongSoLaConLai()==3&&countbaimanh>=1)
-            {System.out.println("uu Tien chu trinh < 2"); System.out.println(" tại 1");return 99;}
-            if(ctkt<=tongSoLaConLai()&&tongSoLaConLai()!=2)
-            {System.out.println("uu tien chu trinh toc chien so la nhieu hon 2"); System.out.println(" tại 2");return 99;}
-            if(ctkt<=tongSoLaConLai()&&tongSoLaConLai()==2&& co2Co)
-            {System.out.println("uu tien chu trinh toc chien co 2 co"); System.out.println(" tại 3");return 99;}
+        if(ctkt<=2) {
+            if(tongSoLaConLai()==3&&countbaimanh>=1) {
+                System.out.println("uu Tien chu trinh < 2"); System.out.println(" tại 1");return 99;
+            }
+            if(ctkt<=tongSoLaConLai()&&tongSoLaConLai()!=2) {
+                System.out.println("uu tien chu trinh toc chien so la nhieu hon 2");
+                System.out.println(" tại 2");return 99;
+            }
+            if(ctkt<=tongSoLaConLai()&&tongSoLaConLai()==2&& co2Co) {
+                System.out.println("uu tien chu trinh toc chien co 2 co");
+                System.out.println(" tại 3");return 99;
+            }
         }
-
         if(solabaitoira==1&&ctkt<=3&&countbaimanh>=3)
         {System.out.println("tại 5"); return 99;}
-        if(SoLaConLaiCuaActor[index_actor_sau]==1)
-        {
+        if(SoLaConLaiCuaActor[index_actor_sau]==1) {
             if(SoLaConLaiCuaActor[index_actor_truoc]==1) {  indexuutien=2;  System.out.println("tại 6");return 99; }
-            else if(countbaimanh>=2&&SoLaConLaiCuaActor[index_actor]>=4)
-            {
+            else if(countbaimanh>=2&&SoLaConLaiCuaActor[index_actor]>=4) {
                 Random rd=new Random();
                 int index_dapanrandom = rd.nextInt(3);
                 if(index_dapanrandom==0) {System.out.println("random=9");return 9;}
                 else {System.out.println("random=99");System.out.println("tại 7");return 99;}
-            }
-            else if(index_actor_sau==1) return 99;
+            } else if(index_actor_sau==1) return 99;
         }
         if(SoLaConLaiCuaActor[index_actor_truoc]==1&&tongSoLaDoiThu>=91) return 99;
         if(soLuongActor==2&&(SoLaConLaiCuaActor[index_actor_sau]==2)) return 99;
         if(tongsohieulabaidothura>=50&& co2Co
-                &&index_actor_truoc==1&&solabaitoira==1)
-        {System.out.println("TM");System.out.println("tại 8");return 99;}
-
-        if(SoLaConLaiCuaActor[1]<=2)
-        {  if(countbaimanh>=3) return 99;
-        else return 98;
+                &&index_actor_truoc==1&&solabaitoira==1) {
+            System.out.println("TM");System.out.println("tại 8");return 99;
         }
-        else if(minactor<=3&&countbaimanh<3)
-        {
+        if(SoLaConLaiCuaActor[1]<=2) {
+            if(countbaimanh>=3) return 99;
+            else return 98;
+        } else if(minactor<=3&&countbaimanh<3) {
             if(SoLaConLaiCuaActor[index_actor]>=maxactor||
-                    ((SoLaConLaiCuaActor[index_actor]>tongSoLaDoiThu/(soLuongActor-1)&&tongSoLaDoiThu<(soLuongActor-1)*11)))
-            {
-
-                {  indexuutien=13;  return 8; }
+                    ((SoLaConLaiCuaActor[index_actor]>tongSoLaDoiThu/(soLuongActor-1)
+                            &&tongSoLaDoiThu<(soLuongActor-1)*11))) {
+                indexuutien=13;  return 8;
             }
         }
         return 0;
-
     }
-    public int mucDoUuTienRaBai2Actor()
-    {
+    public int mucDoUuTienRaBai2Actor() {
         int mdutrbc=mucDoUuTienRaBaiChung();
 
         if(mdutrbc!=0) return mdutrbc;
         //System.out.println("LCK");
 
         if((ctkt==2&&countbaimanh>=2)) return 99;
-        if (countbaimanh>=3&&SoLaConLaiCuaActor[index_actor_sau]<=2)
-        {
+        if (countbaimanh>=3&&SoLaConLaiCuaActor[index_actor_sau]<=2) {
             if(SoLaConLaiCuaActor[index_actor]>SoLaConLaiCuaActor[index_actor_sau])
                 return 99;
         }
@@ -574,15 +416,15 @@ public class TLMB {
 
         //Xử lý bài yếu
         if(countbaimanh<=2 &&SoLaConLaiCuaActor[index_actor]>=8) return 99;
+
         //Xử lý chống ra 2 tép trở lên
         if(tongsohieulabaidothura>=50) return 99;
+
         //Xử lý còn 2 lá
         if(tongsohieubaimanh>=49&&SoLaConLaiCuaActor[index_actor]==2
                 &&tongsohieulabaidothura<49) return 99;
         return 0;
     }
-
-
 }
 
 
